[gd_scene load_steps=5 format=3 uid="uid://cayfj8gw1u3uo"]

[ext_resource type="Script" path="res://scripts/menu.gd" id="1_bb4wv"]
[ext_resource type="PackedScene" uid="uid://b2w0ur30c6yfv" path="res://scenes/menu_background.tscn" id="1_hovjc"]
[ext_resource type="FontFile" uid="uid://dsmkwh8vlk7qy" path="res://assets/fonts/titlefont.ttf" id="3_vryhw"]
[ext_resource type="PackedScene" uid="uid://cjcc86wsnkdwf" path="res://scenes/settings_menu.tscn" id="4_7dy77"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bb4wv")

[node name="MenuBackground" parent="." instance=ExtResource("1_hovjc")]

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 60

[node name="Seperator" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="GameTitle" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 8
theme_override_constants/shadow_offset_y = 8
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("3_vryhw")
theme_override_font_sizes/font_size = 80
text = "Melbourne
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="Seperator" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="StartGame" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(240, 64)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_vryhw")
theme_override_font_sizes/font_size = 24
text = "Start Game"

[node name="Settings" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(240, 64)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_vryhw")
theme_override_font_sizes/font_size = 24
text = "Settings"

[node name="ExitGame" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(240, 64)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_vryhw")
theme_override_font_sizes/font_size = 24
text = "exit game"

[node name="SettingsMenu" parent="." instance=ExtResource("4_7dy77")]
visible = false
layout_mode = 1
